sprint4/tests/error/13_function_return.py
# Incorrect return type in function declaration
#
def func() -> int:
	return False
